fixing menu on mobile

--- a/styles.css
+++ b/styles.css
@@ -2475,7 +2475,7 @@ h3,
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 0rem;
     padding: 2rem 1rem;
   }
 
@@ -2499,7 +2499,7 @@ h3,
 
 
   .overlay-footer.social-links {
-    justify-content: center;
+    justify-content: left;
     padding-bottom: 3rem;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     margin-top: 1rem;
